--- a/manifests.json
+++ b/manifests.json
@@ -5,17 +5,6 @@
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#4a2c22",
-    "description": "Gestor de clientes y pedidos de pan francés.",
-    "icons": [
-        {
-            "src": "icon-192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icon-512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+    "description": "Gestor de clientes y pedidos de pan francés."
+
 }
